--- a/MatematicaApp/src/main/res/layout/fragment_mmc.xml
+++ b/MatematicaApp/src/main/res/layout/fragment_mmc.xml
@@ -1,11 +1,24 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context="com.sergiocruz.Matematica.fragment.MMCFragment">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
+    tools:context="com.sergiocruz.Matematica.fragment.MMCFragment">
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        ads:adSize="SMART_BANNER"
+        ads:adUnitId="@string/banner_ad_unit_id">
+    </com.google.android.gms.ads.AdView>
 
     <ScrollView
         android:id="@+id/scrollView2"
+        android:layout_above="@id/adView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/lightGrey">
@@ -31,10 +44,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
-                    android:paddingTop="4dp"
                     android:paddingBottom="4dp"
                     android:paddingLeft="@dimen/left_right_layout_margin"
-                    android:paddingRight="@dimen/left_right_layout_margin">
+                    android:paddingRight="@dimen/left_right_layout_margin"
+                    android:paddingTop="4dp">
 
                     <TextView
                         android:id="@+id/textView5"
@@ -51,9 +64,9 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:baselineAligned="false"
                         android:orientation="horizontal"
-                        android:paddingTop="4dp"
-                        android:baselineAligned="false">
+                        android:paddingTop="4dp">
 
                         <FrameLayout
                             android:layout_width="match_parent"
@@ -65,11 +78,11 @@
                                 android:id="@+id/mmc_num_1"
                                 android:layout_width="fill_parent"
                                 android:layout_height="@dimen/edittext_height"
+                                android:layout_gravity="center"
                                 android:background="@drawable/edittextstyle"
+                                android:gravity="center"
                                 android:inputType="number"
                                 android:maxLines="1"
-                                android:layout_gravity="center"
-                                android:gravity="center"
                                 android:textAlignment="center"
                                 android:textSize="@dimen/edittextsize"/>
 
@@ -92,12 +105,12 @@
                                 android:id="@+id/mmc_num_2"
                                 android:layout_width="fill_parent"
                                 android:layout_height="@dimen/edittext_height"
+                                android:layout_gravity="center"
                                 android:layout_marginLeft="@dimen/edittext_margin_left"
                                 android:background="@drawable/edittextstyle"
+                                android:gravity="center"
                                 android:inputType="number"
                                 android:maxLines="1"
-                                android:layout_gravity="center"
-                                android:gravity="center"
                                 android:textAlignment="center"
                                 android:textSize="@dimen/edittextsize"/>
 
@@ -110,34 +123,35 @@
 
                         </FrameLayout>
                     </LinearLayout>
+
                     <LinearLayout
+                        android:id="@+id/linear_layout_34"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:animateLayoutChanges="true"
+                        android:baselineAligned="false"
                         android:orientation="horizontal"
                         android:paddingBottom="4dp"
                         android:paddingTop="4dp"
-                        android:visibility="gone"
-                        android:animateLayoutChanges="true"
-                        android:id="@+id/linear_layout_34"
-                        android:baselineAligned="false">
+                        android:visibility="gone">
 
                         <FrameLayout
+                            android:id="@+id/frame_3"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:layout_weight="1"
-                            android:visibility="gone"
-                            android:id="@+id/frame_3">
+                            android:visibility="gone">
 
                             <EditText
                                 android:id="@+id/mmc_num_3"
                                 android:layout_width="fill_parent"
                                 android:layout_height="@dimen/edittext_height"
+                                android:layout_gravity="center"
                                 android:background="@drawable/edittextstyle"
+                                android:gravity="center"
                                 android:inputType="number"
                                 android:maxLines="1"
-                                android:layout_gravity="center"
-                                android:gravity="center"
                                 android:textAlignment="center"
                                 android:textSize="@dimen/edittextsize"/>
 
@@ -151,23 +165,23 @@
                         </FrameLayout>
 
                         <FrameLayout
+                            android:id="@+id/frame_4"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:layout_weight="1"
-                            android:visibility="gone"
-                            android:id="@+id/frame_4">
+                            android:visibility="gone">
 
                             <EditText
                                 android:id="@+id/mmc_num_4"
                                 android:layout_width="fill_parent"
                                 android:layout_height="@dimen/edittext_height"
+                                android:layout_gravity="center"
                                 android:layout_marginLeft="@dimen/edittext_margin_left"
                                 android:background="@drawable/edittextstyle"
+                                android:gravity="center"
                                 android:inputType="number"
                                 android:maxLines="1"
-                                android:layout_gravity="center"
-                                android:gravity="center"
                                 android:textAlignment="center"
                                 android:textSize="@dimen/edittextsize"/>
 
@@ -180,33 +194,34 @@
 
                         </FrameLayout>
                     </LinearLayout>
+
                     <LinearLayout
+                        android:id="@+id/linear_layout_56"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:animateLayoutChanges="true"
+                        android:baselineAligned="false"
                         android:orientation="horizontal"
                         android:paddingBottom="4dp"
-                        android:visibility="gone"
-                        android:animateLayoutChanges="true"
-                        android:id="@+id/linear_layout_56"
-                        android:baselineAligned="false">
+                        android:visibility="gone">
 
                         <FrameLayout
+                            android:id="@+id/frame_5"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:layout_weight="1"
-                            android:visibility="gone"
-                            android:id="@+id/frame_5">
+                            android:visibility="gone">
 
                             <EditText
                                 android:id="@+id/mmc_num_5"
                                 android:layout_width="fill_parent"
                                 android:layout_height="@dimen/edittext_height"
+                                android:layout_gravity="center"
                                 android:background="@drawable/edittextstyle"
+                                android:gravity="center"
                                 android:inputType="number"
                                 android:maxLines="1"
-                                android:layout_gravity="center"
-                                android:gravity="center"
                                 android:textAlignment="center"
                                 android:textSize="@dimen/edittextsize"/>
 
@@ -220,23 +235,23 @@
                         </FrameLayout>
 
                         <FrameLayout
+                            android:id="@+id/frame_6"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:layout_weight="1"
-                            android:visibility="gone"
-                            android:id="@+id/frame_6">
+                            android:visibility="gone">
 
                             <EditText
                                 android:id="@+id/mmc_num_6"
                                 android:layout_width="fill_parent"
                                 android:layout_height="@dimen/edittext_height"
+                                android:layout_gravity="center"
                                 android:layout_marginLeft="@dimen/edittext_margin_left"
                                 android:background="@drawable/edittextstyle"
+                                android:gravity="center"
                                 android:inputType="number"
                                 android:maxLines="1"
-                                android:layout_gravity="center"
-                                android:gravity="center"
                                 android:textAlignment="center"
                                 android:textSize="@dimen/edittextsize"/>
 
@@ -249,33 +264,34 @@
 
                         </FrameLayout>
                     </LinearLayout>
+
                     <LinearLayout
+                        android:id="@+id/linear_layout_78"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:animateLayoutChanges="true"
+                        android:baselineAligned="false"
                         android:orientation="horizontal"
                         android:paddingBottom="4dp"
-                        android:visibility="gone"
-                        android:animateLayoutChanges="true"
-                        android:id="@+id/linear_layout_78"
-                        android:baselineAligned="false">
+                        android:visibility="gone">
 
                         <FrameLayout
+                            android:id="@+id/frame_7"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:layout_weight="1"
-                            android:visibility="gone"
-                            android:id="@+id/frame_7">
+                            android:visibility="gone">
 
                             <EditText
                                 android:id="@+id/mmc_num_7"
                                 android:layout_width="fill_parent"
                                 android:layout_height="@dimen/edittext_height"
+                                android:layout_gravity="center"
                                 android:background="@drawable/edittextstyle"
+                                android:gravity="center"
                                 android:inputType="number"
                                 android:maxLines="1"
-                                android:layout_gravity="center"
-                                android:gravity="center"
                                 android:textAlignment="center"
                                 android:textSize="@dimen/edittextsize"/>
 
@@ -289,23 +305,23 @@
                         </FrameLayout>
 
                         <FrameLayout
+                            android:id="@+id/frame_8"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:layout_weight="1"
-                            android:visibility="gone"
-                            android:id="@+id/frame_8">
+                            android:visibility="gone">
 
                             <EditText
                                 android:id="@+id/mmc_num_8"
                                 android:layout_width="fill_parent"
                                 android:layout_height="@dimen/edittext_height"
+                                android:layout_gravity="center"
                                 android:layout_marginLeft="@dimen/edittext_margin_left"
                                 android:background="@drawable/edittextstyle"
+                                android:gravity="center"
                                 android:inputType="number"
                                 android:maxLines="1"
-                                android:layout_gravity="center"
-                                android:gravity="center"
                                 android:textAlignment="center"
                                 android:textSize="@dimen/edittextsize"/>
 
@@ -338,17 +354,18 @@
                             android:id="@+id/button_add_mmc"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
                             android:layout_alignParentRight="true"
+                            android:layout_centerVertical="true"
                             android:background="@drawable/add_one"/>
+
                         <ImageButton
                             android:id="@+id/button_remove_mmc"
-                            android:visibility="invisible"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
                             android:layout_toLeftOf="@id/button_add_mmc"
-                            android:background="@drawable/less_one"/>
+                            android:background="@drawable/less_one"
+                            android:visibility="invisible"/>
 
                     </RelativeLayout>
                 </LinearLayout>
@@ -371,4 +388,4 @@
 
     </ScrollView>
 
-</FrameLayout>
+</RelativeLayout>
