--- a/MatematicaApp/src/main/res/layout/fragment_primorial.xml
+++ b/MatematicaApp/src/main/res/layout/fragment_primorial.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sergiocruz.Matematica.fragment.FatorizarFragment">
+    tools:context="com.sergiocruz.Matematica.fragment.DivisoresFragment">
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
@@ -13,20 +13,23 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         ads:adSize="SMART_BANNER"
-        ads:adUnitId="@string/banner_ad_unit_id">
+        ads:adUnitId="@string/banner_ad_unit_id"
+        >
     </com.google.android.gms.ads.AdView>
 
     <ScrollView
-        android:id="@+id/scrollView2"
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/adView"
-        android:layout_alignParentTop="true"
-        android:background="@color/lightGrey">
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:orientation="vertical">
 
             <android.support.v7.widget.CardView
@@ -51,13 +54,14 @@
                     android:paddingTop="4dp">
 
                     <TextView
-                        android:id="@+id/textView5"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/textView4"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
+                        android:layout_gravity="center_horizontal"
                         android:fontFamily="sans-serif"
-                        android:text="@string/fatorize_title"
+                        android:text="@string/calculate_primorial_title"
                         android:textAlignment="center"
+                        android:textAllCaps="false"
                         android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
 
                     <FrameLayout
@@ -68,14 +72,13 @@
                         android:paddingTop="4dp">
 
                         <EditText
-                            android:id="@+id/editNumFact"
+                            android:id="@+id/editNum"
                             android:layout_width="fill_parent"
                             android:layout_height="@dimen/edittext_height"
                             android:layout_gravity="center"
                             android:background="@drawable/edittextstyle"
                             android:gravity="center"
                             android:hint="@string/introduzir_numero"
-                            android:text="614889782588491410"
                             android:inputType="number"
                             android:maxLines="1"
                             android:textAlignment="center"/>
@@ -95,12 +98,13 @@
                         android:animateLayoutChanges="true">
 
                         <Button
-                            android:id="@+id/button_calc_fatores"
+                            android:id="@+id/button_calc_primorial"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
                             android:background="@drawable/apptheme_btn_default_holo_light"
-                            android:text="@string/fatorizar_btn"
+                            android:elevation="4dp"
+                            android:text="@string/calculate"
                             android:textAllCaps="false"/>
 
                         <ImageView
@@ -122,8 +126,8 @@
                         android:background="@color/lightBlue"
                         android:visibility="gone">
                     </View>
-                </LinearLayout>
 
+                </LinearLayout>
             </android.support.v7.widget.CardView>
 
             <LinearLayout
@@ -133,13 +137,10 @@
                 android:layout_marginBottom="8dp"
                 android:layout_marginLeft="4dp"
                 android:layout_marginRight="4dp"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="8dp"
                 android:animateLayoutChanges="true"
                 android:orientation="vertical">
             </LinearLayout>
-
         </LinearLayout>
-
     </ScrollView>
-
 </RelativeLayout>
