--- a/MatematicaApp/src/main/res/xml/pref_general.xml
+++ b/MatematicaApp/src/main/res/xml/pref_general.xml
@@ -1,36 +1,49 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <PreferenceCategory
-        android:layout="@layout/settings_textview">
+    <PreferenceCategory android:layout="@layout/settings_textview"/>
 
-    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
-         dismiss it. -->
-    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
-    <ListPreference
-        android:icon="@mipmap/ic_info"
-        android:defaultValue="0"
-        android:entries="@array/pref_list_titles"
-        android:entryValues="@array/pref_list_values"
-        android:key="pref_show_explanation"
-        android:negativeButtonText="@null"
-        android:positiveButtonText="@null"
-        android:title="@string/pref_title_explanation"
-        android:summary="@string/pref_description_explanation"
-        />
+    <PreferenceCategory android:title="Application Options">
+
+        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
+             dismiss it. -->
+        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
+        <ListPreference
+            android:defaultValue="0"
+            android:entries="@array/pref_list_titles"
+            android:entryValues="@array/pref_list_values"
+            android:icon="@mipmap/ic_info"
+            android:key="pref_show_explanation"
+            android:negativeButtonText="@null"
+            android:positiveButtonText="@null"
+            android:summary="@string/pref_description_explanation"
+            android:title="@string/pref_title_explanation" />
         <CheckBoxPreference
+            android:defaultValue="true"
             android:icon="@mipmap/ic_colors"
-            android:title="@string/pref_colors_title"
-            android:summary="@string/pref_description_colors"
             android:key="pref_show_colors"
-            android:defaultValue="true"
-            />
+            android:summary="@string/pref_description_colors"
+            android:title="@string/pref_colors_title" />
         <CheckBoxPreference
-            android:icon="@mipmap/ic_performance"
-            android:title="@string/pref_perform_title"
-            android:summary="@string/pref_description_performance"
-            android:key="pref_show_performance"
             android:defaultValue="true"
-            />
+            android:icon="@mipmap/ic_performance"
+            android:key="pref_show_performance"
+            android:summary="@string/pref_description_performance"
+            android:title="@string/pref_perform_title" />
+    </PreferenceCategory>
 
-</PreferenceCategory>
+    <PreferenceCategory android:title="Select Prime Factorization Mode" >
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:icon="@drawable/force_icon"
+            android:key="pref_brute_force_mode"
+            android:summary="Use brute force mode for prime factorization."
+            android:title="Brute Force Mode" />
+
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:icon="@drawable/probability"
+            android:key="pref_probabilistic_mode"
+            android:summary="Use probabilistic mode for prime factorization."
+            android:title="Probabilistic Mode" />
+    </PreferenceCategory>
 </PreferenceScreen>
