--- a/MatematicaApp/src/main/res/layout/fragment_divisores.xml
+++ b/MatematicaApp/src/main/res/layout/fragment_divisores.xml
@@ -1,146 +1,123 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:ads="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/scrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sergiocruz.Matematica.fragment.DivisoresFragment">
+    android:background="@color/lightGrey">
 
-    <com.google.android.gms.ads.AdView
-        android:id="@+id/adView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        ads:adSize="SMART_BANNER"
-        ads:adUnitId="@string/banner_ad_unit_id"
-        >
-    </com.google.android.gms.ads.AdView>
-
-    <ScrollView
-        android:id="@+id/scrollView"
+<LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@id/adView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <android.support.v7.widget.CardView
+            android:id="@+id/card_view_1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:orientation="vertical">
-
-            <android.support.v7.widget.CardView
-                xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/card_view_1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginLeft="@dimen/left_right_layout_margin"
-                android:layout_marginRight="@dimen/left_right_layout_margin"
-                android:layout_marginTop="4dp"
-                card_view:cardBackgroundColor="@color/bgCardColor"
-                card_view:cardCornerRadius="4dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:paddingBottom="4dp"
-                    android:paddingLeft="@dimen/left_right_layout_margin"
-                    android:paddingRight="@dimen/left_right_layout_margin"
-                    android:paddingTop="4dp">
-
-                    <TextView
-                        android:id="@+id/textView4"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:fontFamily="sans-serif"
-                        android:text="@string/calculate_divisors_title"
-                        android:textAlignment="center"
-                        android:textAllCaps="false"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
-
-                    <FrameLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:paddingBottom="4dp"
-                        android:paddingTop="4dp">
-
-                        <EditText
-                            android:id="@+id/editNum"
-                            android:layout_width="fill_parent"
-                            android:layout_height="@dimen/edittext_height"
-                            android:layout_gravity="center"
-                            android:background="@drawable/edittextstyle"
-                            android:gravity="center"
-                            android:hint="@string/introduzir_numero"
-                            android:inputType="number"
-                            android:maxLines="1"
-                            android:textAlignment="center"/>
-
-                        <Button
-                            android:id="@+id/btn_clear"
-                            android:layout_width="27dp"
-                            android:layout_height="27dp"
-                            android:layout_gravity="center_vertical|right"
-                            android:background="@drawable/ic_clear_text"/>
-
-                    </FrameLayout>
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:animateLayoutChanges="true">
-
-                        <Button
-                            android:id="@+id/button_calc_divisores"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerInParent="true"
-                            android:background="@drawable/apptheme_btn_default_holo_light"
-                            android:elevation="4dp"
-                            android:text="@string/calculate"
-                            android:textAllCaps="false"/>
-
-                        <ImageView
-                            android:id="@+id/cancelTask"
-                            android:layout_width="29dp"
-                            android:layout_height="29dp"
-                            android:layout_alignParentEnd="true"
-                            android:layout_alignParentRight="true"
-                            android:layout_centerVertical="true"
-                            android:layout_marginRight="4dp"
-                            android:src="@drawable/stop_button"
-                            android:visibility="gone"/>
-                    </RelativeLayout>
-
-                    <View
-                        android:id="@+id/progress"
-                        android:layout_width="0dp"
-                        android:layout_height="4dp"
-                        android:background="@color/lightBlue"
-                        android:visibility="gone">
-                    </View>
-
-                </LinearLayout>
-            </android.support.v7.widget.CardView>
+            android:layout_marginLeft="@dimen/left_right_layout_margin"
+            android:layout_marginTop="4dp"
+            android:layout_marginRight="@dimen/left_right_layout_margin"
+            app:cardBackgroundColor="@color/bgCardColor"
+            app:cardCornerRadius="4dp">
 
             <LinearLayout
-                android:id="@+id/history"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginLeft="4dp"
-                android:layout_marginRight="4dp"
-                android:layout_marginTop="8dp"
-                android:animateLayoutChanges="true"
-                android:orientation="vertical">
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:paddingLeft="@dimen/left_right_layout_margin"
+                android:paddingTop="4dp"
+                android:paddingRight="@dimen/left_right_layout_margin"
+                android:paddingBottom="4dp">
+
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:fontFamily="sans-serif"
+                    android:text="@string/calculate_divisors_title"
+                    android:textAlignment="center"
+                    android:textAllCaps="false"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:paddingTop="4dp"
+                    android:paddingBottom="4dp">
+
+                    <EditText
+                        android:id="@+id/editNum"
+                        android:layout_width="fill_parent"
+                        android:layout_height="@dimen/edittext_height"
+                        android:layout_gravity="center"
+                        android:background="@drawable/edittextstyle"
+                        android:gravity="center"
+                        android:hint="@string/introduzir_numero"
+                        android:inputType="number"
+                        android:maxLines="1"
+                        android:textAlignment="center" />
+
+                    <Button
+                        android:id="@+id/btn_clear"
+                        android:layout_width="27dp"
+                        android:layout_height="27dp"
+                        android:layout_gravity="center_vertical|right"
+                        android:background="@drawable/ic_clear_text" />
+
+                </FrameLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:animateLayoutChanges="true">
+
+                    <Button
+                        android:id="@+id/button_calc_divisores"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:background="@drawable/apptheme_btn_default_holo_light"
+                        android:elevation="4dp"
+                        android:text="@string/calculate"
+                        android:textAllCaps="false" />
+
+                    <ImageView
+                        android:id="@+id/cancelTask"
+                        android:layout_width="29dp"
+                        android:layout_height="29dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="4dp"
+                        android:src="@drawable/stop_button"
+                        android:visibility="gone" />
+                </RelativeLayout>
+
+                <View
+                    android:id="@+id/progress"
+                    android:layout_width="0dp"
+                    android:layout_height="4dp"
+                    android:background="@color/lightBlue"
+                    android:visibility="gone"/>
+
             </LinearLayout>
-        </LinearLayout>
-    </ScrollView>
-</RelativeLayout>
+        </android.support.v7.widget.CardView>
+
+        <LinearLayout
+            android:id="@+id/history"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginBottom="8dp"
+            android:animateLayoutChanges="true"
+            android:orientation="vertical"/>
+    </LinearLayout>
+</ScrollView>
+
